# scholarsync

./: .gitignore  CMakeLists.txt  README.md  qml.qrc
.github/workflows/: build-all.yml  build-windows.yml
qml/: main.qml  qmldir
qml/components/: AddFolderDialog.qml  SearchBar.qml  SideBar.qml
qml/pages/: KnowledgePage.qml  LibraryPage.qml  PdfReaderPage.qml  SettingsPage.qml
resources/: qml.qrc  resources.qrc
src/: main.cpp  qrc_qml.cpp
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/pdf/: PdfController.cpp  PdfController.h
src/ragflow/: KnowledgeBaseManager.cpp  KnowledgeBaseManager.h  RagflowClient.cpp  RagflowClient.h
src/sync/: SyncManager.cpp  SyncManager.h
